# mcp-notes

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
mcp_notes/: __main__.py  mcp_server.py  storage.py
tests/: CLAUDE.md  test_mcp_server.py  test_storage.py
